--- a/TouchStudy01/res/values/strings.xml
+++ b/TouchStudy01/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="hello_world2">获取该ViewGroup</string>
+    <string name="hello_world3">这是一个Button</string>
 
 </resources>
